# TodoAdvanceApp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  README.md
.github/workflows/: build.yml  deploy-production.yml  deploy-staging.yml
.specify/memory/: constitution.md  constitution.md.save
backend/: .env.example  Dockerfile  Dockerfile.mcp  Dockerfile.notification  Dockerfile.sse-gateway  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_task_table.py  002_create_conversation_and_message_tables.py  004_add_advanced_fields.py  005_add_event_driven_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  scheduler.py
backend/app/chat/: agent.py  server.py  store.py
backend/app/events/: __init__.py  handlers.py  publisher.py  schemas.py
backend/app/mcp/: server.py
backend/app/mcp/tools/: tasks.py
backend/app/routes/: chat.py  history.py  notifications.py  sse_proxy.py  todos.py
backend/mcp_server/: __main__.py  server.py
backend/services/notification/: Dockerfile  handlers.py  main.py  models.py  requirements.txt
backend/services/sse_gateway/: Dockerfile  connections.py  main.py  requirements.txt
chart/: .helmignore  Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
chart/templates/: NOTES.txt  (+19 more)
dapr/: config.yaml  resiliency.yaml
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
k8s/: DEPLOYMENT.md
scripts/: build-and-deploy.sh  minikube-setup.sh  setup-event-infra.sh
(+235 files in other folders)
